syntax="proto3";

package lavanet.lava.downtime.v1;

option go_package = "github.com/lavanet/lava/v4/x/downtime/v1";

import "lavanet/lava/downtime/v1/downtime.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";


// GenesisState is the genesis state of the downtime module.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Downtime downtimes = 2;
  // last_block_time keeps track of when the last block time was set.
  // it's nullable because we might want it to be non existent.
  // we want it to exist when we have a genesis export-import migration scenario.
  google.protobuf.Timestamp last_block_time = 3[(gogoproto.nullable) = true, (gogoproto.stdtime) = true];
}